platforms/iot-portal/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: insa-iot
  labels:
    app.kubernetes.io/name: insa-iot
    app.kubernetes.io/part-of: iot-platform
    environment: production
